welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:9: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color.cyan);
        ^